--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+  
+  .light-theme {
+    /* Light theme styles */
+    background-color: #fff;
+    color: #333;
+  }
+  
+  .dark-theme {
+    /* Dark theme styles */
+    background-color: #333;
+    color: #fff;
+  }
+  
